# AFRILANG

./: .clang-format  .editorconfig  .gitignore  .tmp_lambda_repro.afr  .tmp_lambda_repro2  .tmp_lambda_repro2.afr  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Function  Function_3  Hello  If_else  If_else_2  Loop_2  Loop_6  NOTICE  README.md  SECURITY.md  _tmp_w  _tmp_w.afr.debug.json  advanced.afr.debug.json  afr_core_only  afrilang.toml  ai_toolkit_demo  args  args_path_demo.afr.debug.json  assert_raise  async  async_demo.afr.debug.json  async_full.afr.debug.json  b64  base64  bounds  chart_data.csv  class_basic  collections  collections.afr.debug.json  (+249 more)
.cursor/: settings.json
.github/workflows/: ci.yml  publish-extension.yml  release.yml
.tmp_pg_test/tmp.5UG0Mb5AuZ/: snake_logic.afr
.tmp_pg_test/tmp.DyGE8UL5sU/: playground.afr
.tmp_pg_test/tmp.a4taRk4JwB/: helpers.afr  playground.afr
.tmp_pg_test/tmp.pNcdXHcGiU/: playground.afr
.tmp_pg_test2/tmp.3KwN8GnNlZ/: playground.afr
.tmp_pg_test2/tmp.C0bA7Ounu2/: playground.afr
.tmp_pg_test2/tmp.FmOdWKTMVm/: playground.afr
.tmp_pg_test2/tmp.L1stowiE6y/: playground.afr
.tmp_pg_test2/tmp.mJoaSzCyor/: playground.afr
.tmp_pg_test2/tmp.xdtqpky3HH/: playground.afr
docs/: COMPILER.md  CORE_STDLIB.md  LANGUAGE.md  MEMORY_MODEL.md  NORMATIVE.md  PKG.md  PLATFORM.md  ROADMAP.md  STDLIB_AI.md  STDLIB_API.md  STDLIB_COMPLEX.md  STDLIB_GEN.md  STDLIB_MEDIUM.md  STDLIB_SIMPLE.md  TORCH.md  WASM_COMPAT.md
docs/book/: README.md  book_chapters.py  book_luxury_chapters.py  generate_afrilang_book.py
examples/: README.md  _one.afr  _tmp_prepend.afr  _tmp_set_range.afr  _tmp_w.afr  ai_toolkit_demo  ai_toolkit_demo.afr  complex_libs_demo  conditions  conditions.afr  conditions.afr.debug.json  conditions.generated.cpp  crystal_arena.afr  crystal_arena_logic.afr  crystal_arena_test.afr  datasci_demo  dbultra_demo.afr  decorator_test.afr  defaults.afr  educational.afr  educational.generated.cpp  exceptions  exceptions.generated.cpp  ffi.afr  fields.afr  french.afr  full_demo  full_demo.afr  full_demo.afr.debug.json  full_demo.generated.cpp  game3d_advanced.afr  game3d_complex  game3d_demo.afr  game3d_editor  game3d_editor.afr  game3d_net.afr  game3d_physics  game_triggers.afr  generic_class.afr  generics.afr  (+99 more)
examples/assets/: pyramid.gltf  pyramid_anim.glb
include/afrilang/: ast.hpp  cache.hpp  cli.hpp  codegen.hpp  compiler.hpp  complex_catalog.hpp  debug.hpp  debug_meta.hpp  diagnostics.hpp  educational.hpp  env.hpp  error.hpp  ffi_allowlist.hpp  formatter.hpp  hash.hpp  i18n.hpp  js_codegen.hpp  lexer.hpp  lsp.hpp  medium_catalog.hpp  parser.hpp  passes.hpp  pkg.hpp  project.hpp  sandbox.hpp  security.hpp  semantic.hpp  semver.hpp  serve.hpp  stdlib_catalog.hpp  stdlib_registry.hpp  target.hpp  token.hpp  torch_install.hpp  types.hpp  utf8.hpp  version.hpp  version.hpp.in
ma_lib/: README.md  ma_lib.afr  manifest.toml  registry-entry.json  smoke.afr.debug.json
ma_lib/tests/: smoke.afr
mobile/: README.md
mobile/afrilang/: README.md  pubspec.yaml
mon_app/: .gitignore  README.md  afrilang.toml  smoke  smoke.afr.debug.json
mon_app/src/: main.afr
mon_app/tests/: smoke.afr
registry/: index.json
runtime/: async.hpp  base64.hpp  collections.hpp  complex_libs.hpp  crypto.hpp  datetime.hpp  email.hpp  env.hpp  fs.hpp  game2d.hpp  game3d.hpp  game3d_advanced.inl.hpp  gamenet.hpp  generator.hpp  hex.hpp  html.hpp  http.hpp  io.hpp  json.hpp  log.hpp  math.hpp  medium_libs.hpp  net.hpp  orm.hpp  path.hpp  proba.hpp  process.hpp  random.hpp  range.hpp  re.hpp  result.hpp  safe.hpp  simple_libs.hpp  sql.hpp  stats.hpp  str.hpp  tempfile.hpp  thread.hpp  time.hpp  torch.hpp  (+5 more)
scripts/: _build_complex_gen.py  _gen_complex_data.py  _mk_complex_stdlib.py  benchmark.sh  build_wasm_compiler.sh  check_asan_bounds.sh  check_asan_conformance.sh  check_blessed_quality.sh  check_conformance_negative.sh  check_docs_honesty.sh  check_examples_ai.sh  check_js_playground.sh  check_sandbox_seccomp.sh  check_tooling_smoke.sh  gen_catalog_lib.py  gen_complex_stdlib.py  gen_medium_stdlib.py  gen_simple_stdlib.py  package-release.sh  publish_registry_index.sh  sign_blessed_all.sh  sign_blessed_subset.sh  test_lsp_diag.py
site/: docs.html  explore.html  index.html  packages.html  packages.json  playground.html  playground.js  site.js  style.css
src/: main.afr
src/codegen/: codegen.cpp
src/lexer/: lexer.cpp
src/lsp/: server.cpp
src/parser/: parser.cpp
src/passes/: mid_ir.cpp  passes.cpp
src/repl/: repl.cpp
src/semantic/: analyzer.cpp
src/serve/: server.cpp
src/utils/: cache.cpp  catalog_loader.cpp  cli.cpp  compiler.cpp  complex_catalog.cpp  debug.cpp  debug_meta.cpp  diagnostics.cpp  educational.cpp  env.cpp  formatter.cpp  hash.cpp  i18n.cpp  js_codegen.cpp  medium_catalog.cpp  pkg.cpp  project.cpp  sandbox.cpp  security.cpp  semver.cpp  stdlib_catalog.cpp  stdlib_registry.cpp  torch_install.cpp  utf8.cpp
src/wasm_api/: compiler_api.cpp
stdlib/: absnum.afr  angle.afr  arc.afr  area_conv.afr  async.afr  audit.afr  avg.afr  base64.afr  binary.afr  bits.afr  bmi.afr  bytes.afr  cache.afr  calendar.afr  capitalize.afr  cbrtlib.afr  celsius.afr  charutil.afr  checksum.afr  chemistry.afr  circle.afr  clamp.afr  coin.afr  collision.afr  color.afr  color2.afr  compare.afr  compass.afr  concat.afr  config.afr  counter.afr  cpu.afr  csv.afr  currency.afr  deg.afr  dice.afr  diff.afr  discount.afr  disk.afr  distance.afr  (+1116 more)
stdlib/c/: compbitpack.afr  compdelta.afr  compdict.afr  compframe.afr  (+5706 more)
tests/: test_compiler.cpp
vscode-afrilang/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  debugAdapter.js  extension.js  hello  install-cursor.sh  install.sh  language-configuration.json  package-lock.json  package.json  publish.sh
w2_lib/: README.md  hello  hello.afr.debug.json  manifest.toml  w2_lib.afr
w2smoke/: README.md
web/: .env.example  .gitignore  README.md  db.sqlite3-journal  docker-compose.yml  manage.py  package.json  requirements.txt  tailwind.config.js
(+374 files in other folders)
